add king detail and ORM queries